--- a/client/README
+++ b/client/README
@@ -37,11 +37,13 @@ Code is broken up by message directory, test directory, and base client director
 the code organization for the client application. 
 
 Base Directory
-1) The transport class defines the transport layer of the protocol in this case the TCP socket. 
+1) The transport class defines the transport layer of the protocol in this case the TCP socket. A Response Timer provides
+a timeout capability if there is no response from the server. An error is sent back to Application layer if 
+the timeout occurs.
 2) The client file holds that main method and entry into the application and represents the application layer.
 3) The CTP file, StateMachine, and CTPResponse defines the CTP protocol. Where CTP.java is the sublayer between the 
 Application layer and the state machine. The StateMachine class is the implementation of the DFA. The CTPResponse 
-class provides a container for status and application information going back the the Applciation layer. 
+class provides a container for status and application information going back the the Application layer. 
 
 Overview: 
 
@@ -54,9 +56,9 @@ StateMachine.java
 Transport.java       Transport Layer 
 
 
-3) The message directory includes all the message classes including a base Message 
+4) The message directory includes all the message classes including a base Message 
 class that all other message types inherit from this base class.
-4) The test directory contains the test server application to support developement and testing of 
+5) The test directory contains the test server application to support developement and testing of 
 the client application.   
 
 #### Testing ####
@@ -66,7 +68,8 @@ the client application.
 4) Should execute a series of messages and pass messages back and forth and then exit. Note 
 that an error message back to the client is part of the test were the client attempts to send an invalid
 message during a state. In this case an edit message when the client does not have the lock.
- 
+5) Also both shells provide some capability to send messages back and forth one at a time although this capability
+was not fully developed.  
 
 
 
